# bazel-learning

./: .gitignore  .yamllint.yaml  BUILD  WORKSPACE.bazel  bazel-bazel-proj  bazel-bin  bazel-out  bazel-testlogs  deps.bzl  maven_install.json
.github/workflows/: action.yml  main.yml
.github/workflows/specific-tests/: action.yaml
bazel/: archive.bzl  terraform.bzl  yamllint.bzl
bazel/toolchains/terraform_tools/: BUILD.bazel  toolchain.bzl
bazel/toolchains/yamllint/: BUILD.bazel  toolchain.bzl
ci/proj1/: test.yaml
documentation/: BUILD.bazel  README.md
projects/ansible-playbooks/add-dependencies/: BUILD.bazel  inventory  main.yaml
projects/flask/: BUILD.bazel  requirements.lock.txt
projects/go-libs/calculator/: BUILD.bazel  calculator.go  calculator_test.go  go.mod
projects/go-web/: BUILD.bazel  go.mod  go.sum  main.go
projects/java_tool/main/java/com/rderik/javatool/calculator/: BUILD.bazel  Calculator.java
projects/java_tool/main/java/com/rderik/javatool/calculator_test/: BUILD.bazel  CalculatorTest.java
projects/java_tool/main/java/com/rderik/javatool/main/: BUILD.bazel  JavaTool.java
projects/kubernetes/: BUILD.bazel  deployment.yaml
projects/lib/: BUILD.bazel  calculator.py  calculator_test.py
projects/py_lib/: BUILD.bazel  calculator_test.py
projects/py_web/: BUILD.bazel  main.py  requirements.lock.txt
projects/terraform-modules/ecr/: BUILD.bazel  main.tf  outputs.tf  variables.tf
