load(
    "@pypi//:requirements.bzl",
    "data_requirement",
    "dist_info_requirement",
    "entry_point",
)
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# This rule adds a convenient way to update the requirements file.
compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.lock.txt",
)

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "//projects/lib:calculator",
        "@pypi_flask//:pkg",
    ],
)
