load("//bazel/toolchains/yamllint:toolchain.bzl", "yamllint_toolchain")

toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

yamllint_toolchain(
    name = "yamllint_linux",
    executable = "yamllint",
)

toolchain(
    name = "yamllint_linux_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":yamllint_linux",
    toolchain_type = ":toolchain_type",
)
